# qbt-hdd-guard

./: .gitignore  DEFAULT_ETW_OVERVIEW.md  README.md  pyproject.toml  requirements.txt  run_hdd_guard.py
etw-helper/: Program.cs  QbtEtwHelper.csproj
qbt_hdd_guard/: cli.py  engine.py  etw.py  logging_utils.py  models.py  monitor.py  pathmap.py  qbt.py  state.py
tests/: test_cli_paths.py  test_engine.py  test_etw.py  test_monitor_audit.py
