[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qbt-hdd-guard"
version = "0.1.0"
description = "Windows-native qBittorrent HDD-churn peer guard"
requires-python = ">=3.10"
dependencies = ["qbittorrent-api==2026.6.0"]

[project.scripts]
qbt-hdd-guard = "qbt_hdd_guard.cli:main"

[tool.setuptools.packages.find]
include = ["qbt_hdd_guard*"]
